--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   #lottie animations
   lottie: ^2.7.0
   qr_code_scanner: ^1.0.1
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
 
 
 
